@@ -1,3 +1,12 @@
+1998-07-13  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* argp.h (ARGP_EI): Define to `extern __inline__', rather that
+	`extern inline'.  Since this code is inside an __OPTIMIZE__ check,
+	I assume this is GCC, and __inline__ will work.
+
+	* mkstemp.c: New file.
+	* gnomesupport.awk: Conditionally emit prototype for `mkstemp'.
+
 Tue Jul  7 00:02:51 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* argp-help.c: Don't include <malloc.h>.
